--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 title: Home
 layout: default
-background: '/img/bg-index.jpg'
+background: ''
 ---
 
 <!-- Home Intro
@@ -9,49 +9,25 @@ background: '/img/bg-index.jpg'
 {% if page.url == "/" %} 
 <div class="rounded mb-5 hero">
   <div class="row align-items-center justify-content-between">
-    <div class="col-md-8">
-      <h1 class="font-weight-bold mb-4 serif-font">Let me  teach you how to become successful online</h1>
-      <p class="lead mb-4">My name is Lyam and I'm here to share with you my knowledge and experience of over 10 years of monetizing my blog.</p>
-      <a href="{{site.baseurl}}/about" class="btn btn-dark text-white px-5 btn-lg">About me</a>
+    <div class="col-md-9">
+      <h2 class="font-weight-bold mb-4 serif-font">Empowering Businesses & Tech Enthusiasts with Expertise</h1>
+      <p class="lead ">I’m Philip Boadu Asare, a software engineer with experience spanning fintech, multinational firms, startups, and academia.</p>
+      <p class="lead "> I help businesses optimize technology for growth and guide aspiring developers through IT tutoring and mentorship.</p>
+      <p class="lead mb-4">🚀 Let’s build, innovate, and grow together!</p>
     </div>
-    <div class="col-md-4 text-right pl-0 pl-lg-4">
-      <img class="intro" height="500" src="{{site.baseurl}}/assets/images/intro.png">      
+    
+    <div class="col-md-3 text-right pl-0 pl-lg-4">
+      <img class="intro" height="300" width="300" src="{{site.baseurl}}/assets/images/intro.png">      
     </div>
   </div>
+
+  <div class="row align-items-center justify-content-between mt-10">
+    <div col-md-10>
+      <a href="{{site.baseurl}}/" class="btn btn-dark text-white px-5 btn-lg mb-1">About me</a>
+    </div>
+  </div>
+
 </div>
 {% endif %}
 
-<!-- Featured
-================================================== -->
-<section class="row">
-  {% for post in site.posts %}
-      {% if post.featured == true %}
-          <div class="col-md-4 mb-5">
-          {% include postbox.html %}
-          </div>
-      {% endif %}
-  {% endfor %}
-  </div>
-</section>
 
-<!-- Posts List with Sidebar (except featured)
-================================================== -->
-<section class="row">
-  <div class="col-sm-12">
-    <div class="row">
-      {% for post in paginator.posts %}
-      {% unless post.featured == true %}
-      <div class="col-md-6 mb-5">
-        {% include postbox.html %}
-      </div>
-      {% endunless %}
-      {% endfor %}
-    </div>
-    <!-- Pagination -->
-    <div class="bottompagination">
-      <span class="navigation" role="navigation">
-          {% include pagination.html %}
-      </span>
-    </div>
-  </div>
-</section>
