Update hemepage intro

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ background: ''
   <div class="row align-items-center justify-content-between">
     <div class="col-md-9">
       <h2 class="font-weight-bold mb-4 serif-font">Empowering Businesses & Tech Enthusiasts with Expertise</h1>
-      <p class="lead ">I’m Philip Boadu Asare, a software engineer with experience spanning fintech, multinational firms, startups, and academia.</p>
+      <p class="lead ">I’m Philip Boadu Asare, a software engineer with experience spanning automation, fintechs, startups, and academia.</p>
       <p class="lead "> I help businesses optimize technology for growth and guide aspiring developers through IT tutoring and mentorship.</p>
       <p class="lead mb-4">🚀 Let’s build, innovate, and grow together!</p>
     </div>
